--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
   <nav>
     <div class="logo">GoTrip</div>
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -223,4 +223,5 @@
   </footer>
 
 </body>
+
 </html>
