--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
         <nav class="navbar">
             <div class="logo">GoTrip</div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
