--- a/destinations.html
+++ b/destinations.html
@@ -132,7 +132,7 @@
         <nav class="navbar">
             <div class="logo">GoTrip</div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -189,3 +189,4 @@
 
 </body>
 </html>
+
