--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
     <!-- Contact Info -->
     <div class="contact-info">
       <h2>Contact Information</h2>
-      <p><strong>Email:</strong> travelwebsite@gmail.com</p>
+      <p><strong>Email:</strong> gotrip@gmail.com</p>
       <p><strong>Phone:</strong> +91 9876543210</p>
 
       <div class="social-icons">
@@ -225,3 +225,4 @@
 </body>
 
 </html>
+
